--- a/package.json
+++ b/package.json
@@ -13,15 +13,9 @@
   "dependencies": {
     "babel-plugin-react-css-modules": "^5.2.5",
     "classnames": "^2.2.6",
-    "immer": "2.1.3",
     "prop-types": "15.7.2",
     "react": "16.8.4",
-    "react-dom": "16.8.4",
-    "react-redux": "6.0.1",
-    "react-router-dom": "5.0.0",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "react-dom": "16.8.4"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
@@ -39,13 +33,10 @@
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.11.1",
     "mini-css-extract-plugin": "0.5.0",
-    "node-fetch": "^2.3.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
     "postcss-scss": "^2.0.0",
-    "react-css-modules": "^4.7.10",
-    "redux-immutable-state-invariant": "2.1.0",
     "rimraf": "2.6.3",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
